[package]
name = "redis-cli"
version = "0.4.0"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Redis CLI."
documentation = "https://github.com/iorust/redis-cli"
homepage = "https://github.com/iorust/redis-cli"
repository = "https://github.com/iorust/redis-cli.git"
readme = "README.md"
keywords = ["redis", "CLI"]
license = "MIT/Apache-2.0"

[dependencies]
resp = "^0.3.4"
mio = "^0.5.0"
slab = "0.1.3"
time = "0.1.33"

[dependencies.clap]
version = "^2.2.1"
default-features = false

[[bin]]
name = "redis-cli"
