[package]
name = "redis-cli"
version = "0.4.0"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Redis CLI."
documentation = "https://github.com/iorust/redis-cli"
homepage = "https://github.com/iorust/redis-cli"
repository = "https://github.com/iorust/redis-cli.git"
readme = "README.md"
keywords = ["redis", "CLI"]
license = "MIT/Apache-2.0"

[dependencies]
clap = {version = "2.2.1", default-features = false}
mio = "0.5.0"
resp = "0.3.4"

[[bin]]
name = "redis-cli"
